framec_tests/language_specific/cpp/v3_facade_smoke/negative/wrapper_missing_semicolon.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                __frame_forward()
            }
        }
}

